; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_win32_tls.c__glfwCreateContextTLS.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_win32_tls.c__glfwCreateContextTLS.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64, i32 }

@_glfw = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@TLS_OUT_OF_INDEXES = common dso_local global i64 0, align 8
@GLFW_PLATFORM_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"Win32: Failed to allocate TLS index\00", align 1
@GL_FALSE = common dso_local global i32 0, align 4
@GL_TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_glfwCreateContextTLS() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @TlsAlloc()
  store i64 %2, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  %4 = load i64, i64* @TLS_OUT_OF_INDEXES, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %10

6:                                                ; preds = %0
  %7 = load i32, i32* @GLFW_PLATFORM_ERROR, align 4
  %8 = call i32 @_glfwInputError(i32 %7, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* @GL_FALSE, align 4
  store i32 %9, i32* %1, align 4
  br label %13

10:                                               ; preds = %0
  %11 = load i32, i32* @GL_TRUE, align 4
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 1), align 8
  %12 = load i32, i32* @GL_TRUE, align 4
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %10, %6
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i64 @TlsAlloc(...) #1

declare dso_local i32 @_glfwInputError(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
